RESOLVED FIXED33886
[Chromium][V8] Fix null pointer dereference in V8Proxy::retrieve().
https://bugs.webkit.org/show_bug.cgi?id=33886
Summary [Chromium][V8] Fix null pointer dereference in V8Proxy::retrieve().
Kent Tamura
Reported 2010-01-20 01:09:19 PST
[Chromium][V8] Fix null pointer dereference in V8Proxy::retrieve().
Attachments
Proposd patch (1.14 KB, patch)
2010-01-20 01:11 PST, Kent Tamura
no flags
Kent Tamura
Comment 1 2010-01-20 01:11:22 PST
Created attachment 46988 [details] Proposd patch
WebKit Commit Bot
Comment 2 2010-01-20 06:15:06 PST
Comment on attachment 46988 [details] Proposd patch Clearing flags on attachment: 46988 Committed r53546: <http://trac.webkit.org/changeset/53546>
WebKit Commit Bot
Comment 3 2010-01-20 06:15:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.