2010-01-20  Kent Tamura  <tkent@chromium.org>

Reviewed by Adam Barth.

        [Chromium][V8] Fix null pointer dereference in V8Proxy::retrieve().
        https://bugs.webkit.org/show_bug.cgi?id=33886

        This is equivalent to r53433, and fix a crash by
        LayoutTests/http/tests/appcache/destroyed-iframe.html.

        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::retrieve): Check if context is null.

Canonical link: https://commits.webkit.org/44945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53546 268f45cc-cd09-0410-ab3c-d52691b4dbfc