WebCore/bindings/v8/V8Proxy.cpp
@@ -552,7 +552,7 @@ V8Proxy* V8Proxy::retrieve(Frame* frame)
 
 V8Proxy* V8Proxy::retrieve(ScriptExecutionContext* context)
 {
-    if (!context->isDocument())
+    if (!context || !context->isDocument())
         return 0;
     return retrieve(static_cast<Document*>(context)->frame());
 }
